tests/invalid/use_alias_conflicts_with_symbol.wio
fn console() -> i32 {
    return 0;
}

use std::console as console;

fn Entry(args: string[]) -> i32 {
    return 0;
}
